--- a/99-practice/SportsSln/SportsStore/Views/_ViewImports.cshtml
+++ b/99-practice/SportsSln/SportsStore/Views/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 @* 运行在视图里直接使用这个命名空间的类型而不用引用命名空间 *@
 @using SportsStore.Models;
+@using SportsStore.Models.ViewModels
+
 @* 启用内置的标签帮助功能 *@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, SportsStore
