security and deployment

--- a/99-practice/SportsSln/SportsStore/Pages/Admin/Index.cshtml
+++ b/99-practice/SportsSln/SportsStore/Pages/Admin/Index.cshtml
@@ -1,7 +1,10 @@
 @page "/admin"
 @{
-    Layout = null; 
+    Layout = null;
 }
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
+
 <!DOCTYPE html>
 <html>
 
