--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/Watersports.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/Watersports.cshtml
@@ -1,3 +1,4 @@
+@model WebApp.Models.Product
 <!DOCTYPE html>
 <html>
 
@@ -22,6 +23,10 @@
                     <th>Category ID</th>
                     <td>@Model?.CategoryId</td>
                 </tr>
+                @* <tr>
+                    <th>Tax Rate</th>
+                    <td>@Model?.TaxRate</td>
+                    </tr> *@
             </tbody>
         </table>
     </div>
