--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/Watersports.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/Watersports.cshtml
@@ -27,6 +27,14 @@
                     <th>Tax Rate</th>
                     <td>@Model?.TaxRate</td>
                     </tr> *@
+                <tr>
+                    <th>Tax</th>
+                    <td>@Model?.Price * 0.2m</td>
+                </tr>
+                <tr>
+                    <th>Tax</th>
+                    <td>@(Model?.Price * 0.2m)</td>
+                </tr>
             </tbody>
         </table>
     </div>
