Using Razor Code Blocks

--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/List.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/List.cshtml
@@ -1,4 +1,7 @@
 @model IEnumerable<WebApp.Models.Product>
+@{
+    decimal average = Model?.Average(p => p.Price) ?? 0;
+}
 <!DOCTYPE html>
 <html>
 
@@ -22,6 +25,8 @@
                     <tr>
                         <td>@p.Name</td>
                         <td>@p.Price</td>
+                        <td>@((p.Price / average * 100).ToString("F1"))
+                            % of average</td>
                     </tr>
                 }
             </tbody>
