--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/Index.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 @model WebApp.Models.Product
 @{
     Layout = "_Layout";
+    ViewBag.Title = ViewBag.Title ?? "Product Table";
 }
 <div class="m-2">
     <table class="table table-sm table-striped table-bordered">
