Overriding the Default Layout

--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/Index.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 @model WebApp.Models.Product
 @{
-    Layout = "_Layout";
+    Layout = Model.Price > 100 ? "_ImportantLayout" : "_Layout";
     ViewBag.Title = ViewBag.Title ?? "Product Table";
 }
 <div class="m-2">
