--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/List.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/List.cshtml
@@ -1,5 +1,6 @@
 @model IEnumerable<WebApp.Models.Product>
 @{
+    Layout = null;
     decimal average = Model?.Average(p => p.Price) ?? 0;
 }
 <!DOCTYPE html>
