--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/List.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/List.cshtml
@@ -23,12 +23,7 @@
             <tbody>
                 @foreach (WebApp.Models.Product p in Model ?? Enumerable.Empty<WebApp.Models.Product>())
                 {
-                    <tr>
-                        <td>@p.Name</td>
-                        <td>@p.Price</td>
-                        <td>@((p.Price / average * 100).ToString("F1"))
-                            % of average</td>
-                    </tr>
+                    <partial name="_RowPartial" model="p" />
                 }
             </tbody>
         </table>
