Adding a View Imports File

--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Suppliers/List.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Suppliers/List.cshtml
@@ -1,7 +1,7 @@
 @page "/lists/suppliers"
 @model ListModel
 @using Microsoft.AspNetCore.Mvc.RazorPages
-@using WebApp.Models;
+@* @using WebApp.Models; *@
 
 <!DOCTYPE html>
 <html>
