--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/Index.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/Index.cshtml
@@ -5,22 +5,28 @@
 }
 
 @section Header {
-    Product Information
+Product Information
 }
 
-<tr><th>Name</th><td>@Model?.Name</td></tr>
 <tr>
-<th>Price</th>
-<td>@Model?.Price.ToString("c")</td>
+    <th>Name</th>
+    <td>@Model?.Name</td>
 </tr>
-<tr><th>Category ID</th><td>@Model?.CategoryId</td></tr>
+<tr>
+    <th>Price</th>
+    <td>@Model?.Price.ToString("c")</td>
+</tr>
+<tr>
+    <th>Category ID</th>
+    <td>@Model?.CategoryId</td>
+</tr>
 
 @section Footer {
-    @(((Model?.Price / ViewBag.AveragePrice) * 100).ToString("F2"))% of average price
+@(((Model?.Price / ViewBag.AveragePrice) * 100).ToString("F2"))% of average price
 }
 
 @section Summary {
-    <div class="bg-info text-white m-2 p-2">
-        @Json.Serialize(Model)
-    </div>
+<div class="bg-info text-white m-2 p-2">
+    @await Component.InvokeAsync("CitySummary")
+</div>
 }
