Applying View Components in Razor Pages

--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Data.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Data.cshtml
@@ -9,6 +9,9 @@
         <li class="list-group-item">@c.Name</li>
     }
 </ul>
+<div class="bg-info text-white m-2 p-2">
+    <vc:city-summary />
+</div>
 
 @functions {
     public class DataPageModel : PageModel
