--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/Index.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/Index.cshtml
@@ -27,6 +27,6 @@ Product Information
 
 @section Summary {
 <div class="bg-info text-white m-2 p-2">
-    <vc:city-summary />
+    <vc:city-summary theme-name=”secondary” />
 </div>
 }
