Using a Default Parameter Value

--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Data.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Data.cshtml
@@ -10,7 +10,7 @@
     }
 </ul>
 <div class="bg-info text-white m-2 p-2">
-    <vc:city-summary theme-name="danger" />
+    <vc:city-summary />
 </div>
 
 @functions {
