--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Cities.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Cities.cshtml
@@ -1,9 +1,10 @@
 @page
-@inject CitiesData Data
+@model WebApp.Pages.CitiesModel
+
 <div class="m-2">
     <table class="table table-sm table-striped table-bordered">
         <tbody>
-            @foreach (City c in Data.Cities)
+            @foreach (City c in Model.Data?.Cities ?? Enumerable.Empty<City>())
             {
                 <tr>
                     <td>@c.Name</td>
