--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Data.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Data.cshtml
@@ -1,31 +1,13 @@
 @page
-@model DataPageModel
-@using Microsoft.AspNetCore.Mvc.RazorPages
+@inject DataContext context;
 
 <h5 class="bg-primary text-white text-center m-2 p-2">Categories</h5>
 <ul class="list-group m-2">
-    @foreach (Category c in Model.Categories)
+    @foreach (Category c in context.Categories)
     {
         <li class="list-group-item">@c.Name</li>
     }
 </ul>
 <div class="bg-info text-white m-2 p-2">
-    <vc:city-summary />
+    <vc:cities-page-hybrid />
 </div>
-
-@functions {
-    public class DataPageModel : PageModel
-    {
-        private DataContext context;
-        public IEnumerable<Category> Categories { get; set; }
-        = Enumerable.Empty<Category>();
-        public DataPageModel(DataContext ctx)
-        {
-            context = ctx;
-        }
-        public void OnGet()
-        {
-            Categories = context.Categories;
-        }
-    }
-}
