--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Data.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Data.cshtml
@@ -9,5 +9,6 @@
     }
 </ul>
 <div class="bg-info text-white m-2 p-2">
-    <vc:cities-page-hybrid />
+    @* <vc:cities-page-hybrid /> *@
+    <vc:cities-controller-hybrid />
 </div>
