--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/_RowPartial.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Home/_RowPartial.cshtml
@@ -1,5 +1,8 @@
 @model Product
 <tr>
-    <partial name="_CellPartial" for="Name" />
-    <td>@Model?.Price</td>
+    <td>@Model?.Name</td>
+    <td>@Model?.Price.ToString("c")</td>
+    <td>@Model?.CategoryId</td>
+    <td>@Model?.SupplierId</td>
+    <td></td>
 </tr>
