--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Shared/_Layout.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Shared/_Layout.cshtml
@@ -1,38 +1,46 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>@ViewBag.Title</title>
-        <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    </head>
 
-    <body>
-        <div class="m-2">
-            <table class="table table-sm table-striped table-bordered">
-                <thead>
-                    <tr>
-                        <th class="bg-primary text-white text-center" colspan="2">
-                            @RenderSection("Header", false)
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @RenderBody()
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <th class="bg-primary text-white text-center" colspan="2">
-                            @RenderSection("Footer", false)
-                        </th>
-                        </tr>
-                </tfoot>
-            </table>
+<head>
+    <title>@ViewBag.Title</title>
+    <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        asp-fallback-src="/lib/jquery/jquery.min.js" asp-fallback-test="window.jQuery">
+        </script>
+</head>
+
+<body>
+    <div class="m-2">
+        <table class="table table-sm table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th class="bg-primary text-white text-center" colspan="2">
+                        @RenderSection("Header", false)
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                @RenderBody()
+            </tbody>
+            <tfoot>
+                <tr>
+                    <th class="bg-primary text-white text-center" colspan="2">
+                        @RenderSection("Footer", false)
+                    </th>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
+    @if (IsSectionDefined("Summary"))
+    {
+        @RenderSection("Summary", false)
+    }
+    else
+    {
+        <div class="bg-info text-center text-white m-2 p-2">
+            This is the default summary
         </div>
-        @if (IsSectionDefined("Summary")) {
-            @RenderSection("Summary", false)
-        } else {
-            <div class="bg-info text-center text-white m-2 p-2">
-                This is the default summary
-            </div>
-        }
-    </body>
+    }
+</body>
+
 </html>
