--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Shared/_SimpleLayout.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Shared/_SimpleLayout.cshtml
@@ -3,7 +3,9 @@
 
 <head>
     <title>@ViewBag.Title</title>
-    <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css"
+        asp-fallback-href="/lib/bootstrap/css/bootstrap.min.css" asp-fallback-test-class="btn"
+        asp-fallback-test-property="display" asp-fallback-test-value="inline-block" rel="stylesheet" />
 </head>
 
 <body>
