--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Shared/_SimpleLayout.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Shared/_SimpleLayout.cshtml
@@ -11,7 +11,7 @@
         <h6 class="bg-primary text-white m-2 p-2">
             Uncached timestamp: @DateTime.Now.ToLongTimeString()
         </h6>
-        <cache expires-after="@TimeSpan.FromSeconds(15)">
+        <cache expires-sliding="@TimeSpan.FromSeconds(10)">
             <h6 class="bg-primary text-white m-2 p-2">
                 Cached timestamp: @DateTime.Now.ToLongTimeString()
             </h6>
