--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Form/Form.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Form/Form.cshtml
@@ -6,8 +6,13 @@
 @* <form action="/controllers/form/submitform" method="post"> *@
 <form asp-action="submitform" method="post" id="htmlform">
     <div class="form-group">
+        <label>Id</label>
+        <input class="form-control" asp-for="ProductId" />
+    </div>
+    <div class="form-group">
         <label>Name</label>
-        <input class="form-control" name="Name" value="@Model?.Name" />
+        @* <input class="form-control" name="Name" value="@Model?.Name" /> *@
+        <input class="form-control" asp-for="Name" />
     </div>
     <button type="submit" class="btn btn-primary mt-2">Submit</button>
 </form>
