--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Form/Form.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Form/Form.cshtml
@@ -14,6 +14,10 @@
         @* <input class="form-control" name="Name" value="@Model?.Name" /> *@
         <input class="form-control" asp-for="Name" />
     </div>
+    <div class="form-group">
+        <label>Price</label>
+        <input class="form-control" asp-for="Price" asp-format="{0:#,###.00}" />
+    </div>
     <button type="submit" class="btn btn-primary mt-2">Submit</button>
 </form>
 <button form="htmlform" asp-action="submitform" class="btn btn-primary mt-2">
