--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Form/Form.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Form/Form.cshtml
@@ -16,7 +16,7 @@
     </div>
     <div class="form-group">
         <label>Price</label>
-        <input class="form-control" asp-for="Price" asp-format="{0:#,###.00}" />
+        <input class="form-control" asp-for="Price" />
     </div>
     <button type="submit" class="btn btn-primary mt-2">Submit</button>
 </form>
