--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Form/Form.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Form/Form.cshtml
@@ -18,6 +18,26 @@
         <label>Price</label>
         <input class="form-control" asp-for="Price" />
     </div>
+    <div class="form-group">
+        <label>Category</label>
+        @{
+            #pragma warning disable CS8602
+        }
+        <input class="form-control" asp-for="Category.Name" />
+        @{
+            #pragma warning restore CS8602
+        }
+    </div>
+    <div class="form-group">
+        <label>Supplier</label>
+        @{
+            #pragma warning disable CS8602
+        }
+        <input class="form-control" asp-for="Supplier.Name" />
+        @{
+            #pragma warning restore CS8602
+        }
+    </div>
     <button type="submit" class="btn btn-primary mt-2">Submit</button>
 </form>
 <button form="htmlform" asp-action="submitform" class="btn btn-primary mt-2">
