--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Form/Form.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Form/Form.cshtml
@@ -1,38 +1,36 @@
 @model Product
 @{
-    Layout = "_SimpleLayout";
+    Layout = "_SimpleLayout"; 
 }
 <h5 class="bg-primary text-white text-center p-2">HTML Form</h5>
-@* <form action="/controllers/form/submitform" method="post"> *@
 <form asp-action="submitform" method="post" id="htmlform">
     <div class="form-group">
-        <label>Id</label>
+        <label asp-for="ProductId"></label>
         <input class="form-control" asp-for="ProductId" />
     </div>
     <div class="form-group">
-        <label>Name</label>
-        @* <input class="form-control" name="Name" value="@Model?.Name" /> *@
+        <label asp-for="Name"></label>
         <input class="form-control" asp-for="Name" />
     </div>
     <div class="form-group">
-        <label>Price</label>
+        <label asp-for="Price"></label>
         <input class="form-control" asp-for="Price" />
     </div>
     <div class="form-group">
-        <label>Category</label>
         @{
             #pragma warning disable CS8602
         }
+        <label asp-for="Category.Name">Category</label>
         <input class="form-control" asp-for="Category.Name" />
         @{
             #pragma warning restore CS8602
         }
     </div>
     <div class="form-group">
-        <label>Supplier</label>
         @{
             #pragma warning disable CS8602
         }
+        <label asp-for="Supplier.Name">Supplier</label>
         <input class="form-control" asp-for="Supplier.Name" />
         @{
             #pragma warning restore CS8602
