Working with Select and Option Elements

--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/FormHandler.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/FormHandler.cshtml
@@ -1,6 +1,7 @@
 @page "/pages/form/{id:long?}"
 @model FormHandlerModel
 @using Microsoft.AspNetCore.Mvc.RazorPages
+@using Microsoft.EntityFrameworkCore
 
 <div class="m-2">
     <h5 class="bg-primary text-white text-center p-2">HTML Form</h5>
