--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Form/Form.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Form/Form.cshtml
@@ -1,6 +1,6 @@
 @model Product
 @{
-    Layout = "_SimpleLayout"; 
+    Layout = "_SimpleLayout";
 }
 <h5 class="bg-primary text-white text-center p-2">HTML Form</h5>
 <form asp-action="submitform" method="post" id="htmlform">
@@ -21,10 +21,14 @@
             #pragma warning disable CS8602
         }
         <label asp-for="Category.Name">Category</label>
-        <input class="form-control" asp-for="Category.Name" />
         @{
             #pragma warning restore CS8602
         }
+        <select class="form-control" asp-for="CategoryId">
+            <option value="1">Watersports</option>
+            <option value="2">Soccer</option>
+            <option value="3">Chess</option>
+        </select>
     </div>
     <div class="form-group">
         @{
