--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Form/Form.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Form/Form.cshtml
@@ -24,10 +24,7 @@
         @{
             #pragma warning restore CS8602
         }
-        <select class="form-control" asp-for="CategoryId">
-            <option value="1">Watersports</option>
-            <option value="2">Soccer</option>
-            <option value="3">Chess</option>
+        <select class="form-control" asp-for="CategoryId" asp-items="@ViewBag.Categories">
         </select>
     </div>
     <div class="form-group">
