--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Form/Form.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Form/Form.cshtml
@@ -32,7 +32,7 @@
             #pragma warning disable CS8602
         }
         <label asp-for="Supplier.Name">Supplier</label>
-        <input class="form-control" asp-for="Supplier.Name" />
+        <textarea class="form-control" asp-for="Supplier.Name"></textarea>
         @{
             #pragma warning restore CS8602
         }
