--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/FormHandler.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/FormHandler.cshtml
@@ -8,11 +8,11 @@
     <form asp-page="FormHandler" method="post" id="htmlform">
         <div class="form-group">
             <label>Name</label>
-            <input class="form-control" asp-for="Product.Name" />
+            <input class="form-control" asp-for="Product.Name" name="name" />
         </div>
         <div class="form-group">
             <label>Price</label>
-            <input class="form-control" asp-for="Product.Price" />
+            <input class="form-control" asp-for="Product.Price" name="price" />
         </div>
         <div class="form-group">
             <label>Category</label>
@@ -40,6 +40,7 @@
         Submit (Outside Form)
     </button>
 </div>
+
 @functions {
     [IgnoreAntiforgeryToken]
     public class FormHandlerModel : PageModel
@@ -55,13 +56,19 @@
             Product = await context.Products.Include(p => p.Category)
             .Include(p => p.Supplier).FirstAsync(p => p.ProductId == id);
         }
-        public IActionResult OnPost()
-        {
+        @* public IActionResult OnPost()
+            {
             foreach (string key in Request.Form.Keys
             .Where(k => !k.StartsWith("_")))
             {
-                TempData[key] = string.Join(", ", Request.Form[key]);
+            TempData[key] = string.Join(", ", Request.Form[key]);
             }
+            return RedirectToPage("FormResults");
+            } *@
+        public IActionResult OnPost(string name, decimal price)
+        {
+            TempData["name param"] = name;
+            TempData["price param"] = price.ToString();
             return RedirectToPage("FormResults");
         }
     }
