--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/FormHandler.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/FormHandler.cshtml
@@ -8,11 +8,11 @@
     <form asp-page="FormHandler" method="post" id="htmlform">
         <div class="form-group">
             <label>Name</label>
-            <input class="form-control" asp-for="Product.Name" name="name" />
+            <input class="form-control" asp-for="Product.Name" />
         </div>
         <div class="form-group">
             <label>Price</label>
-            <input class="form-control" asp-for="Product.Price" name="price" />
+            <input class="form-control" asp-for="Product.Price" />
         </div>
         <div class="form-group">
             <label>Category</label>
@@ -50,7 +50,10 @@
         {
             context = dbContext;
         }
+
+        [BindProperty]
         public Product? Product { get; set; }
+        
         public async Task OnGetAsync(long id = 1)
         {
             Product = await context.Products.Include(p => p.Category)
@@ -65,10 +68,9 @@
             }
             return RedirectToPage("FormResults");
             } *@
-        public IActionResult OnPost(string name, decimal price)
+        public IActionResult OnPost()
         {
-            TempData["name param"] = name;
-            TempData["price param"] = price.ToString();
+            TempData["product"] = System.Text.Json.JsonSerializer.Serialize(Product);
             return RedirectToPage("FormResults");
         }
     }
