Binding to Simple Collections

--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Bindings.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Bindings.cshtml
@@ -36,6 +36,6 @@
     public class BindingsModel : PageModel
     {
         [BindProperty(Name = "Data")]
-        public string[] Data { get; set; } = Array.Empty<string>();
+        public SortedSet<string> Data { get; set; } = new SortedSet<string>();
     }
 }
