Displaying Validation Messages

--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/FormHandler.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/FormHandler.cshtml
@@ -2,16 +2,25 @@
 @model FormHandlerModel
 @using Microsoft.AspNetCore.Mvc.RazorPages
 @using Microsoft.EntityFrameworkCore
+@using Microsoft.AspNetCore.Mvc.ModelBinding
+
+<partial name="_Validation" />
 
 <div class="m-2">
     <h5 class="bg-primary text-white text-center p-2">HTML Form</h5>
     <form asp-page="FormHandler" method="post" id="htmlform">
         <div class="form-group">
             <label>Name</label>
+            <div>
+                <span asp-validation-for="Product.Name" class="text-danger"></span>
+            </div>
             <input class="form-control" asp-for="Product.Name" />
         </div>
         <div class="form-group">
             <label>Price</label>
+            <div>
+                <span asp-validation-for="Product.Price" class="text-danger"></span>
+            </div>
             <input class="form-control" asp-for="Product.Price" />
         </div>
         <div class="form-group">
@@ -23,6 +32,22 @@
             @{
                 #pragma warning restore CS8602
             }
+        </div>
+        <div class="form-group">
+            <label>CategoryId</label>
+            <div>
+                <span asp-validation-for="Product.CategoryId" class="text-danger">
+                </span>
+            </div>
+            <input class="form-control" asp-for="Product.CategoryId" />
+        </div>
+        <div class="form-group">
+            <label>SupplierId</label>
+            <div>
+                <span asp-validation-for="Product.SupplierId" class="text-danger">
+                </span>
+            </div>
+            <input class="form-control" asp-for="Product.SupplierId" />
         </div>
         <button type="submit" class="btn btn-primary mt-2">Submit</button>
     </form>
@@ -44,13 +69,12 @@
         [BindProperty]
         public Product? Product { get; set; }
 
-        [BindProperty(Name = "Product.Category")]
-        public Category Category { get; set; } = new();
+        // [BindProperty(Name = "Product.Category")]
+        // public Category Category { get; set; } = new();
 
         public async Task OnGetAsync(long id = 1)
         {
-            Product = await context.Products.Include(p => p.Category)
-            .Include(p => p.Supplier).FirstAsync(p => p.ProductId == id);
+            Product = await context.Products.FirstAsync(p => p.ProductId == id);
         }
         @* public IActionResult OnPost()
             {
@@ -63,9 +87,46 @@
             } *@
         public IActionResult OnPost()
         {
-            TempData["product"] = System.Text.Json.JsonSerializer.Serialize(Product);
-            TempData["category"] = System.Text.Json.JsonSerializer.Serialize(Category);
-            return RedirectToPage("FormResults");
+            if (ModelState.GetValidationState("Product.Price") == ModelValidationState.Valid && Product.Price < 1)
+            {
+                ModelState.AddModelError("Product.Price", "Enter a positive price");
+            }
+            if (ModelState.GetValidationState("Product.Name")
+            == ModelValidationState.Valid
+            && ModelState.GetValidationState("Product.Price")
+            == ModelValidationState.Valid
+            && Product.Name.ToLower().StartsWith("small")
+            && Product.Price > 100)
+            {
+                ModelState.AddModelError("",
+                "Small products cannot cost more than $100");
+            }
+            if (ModelState.GetValidationState("Product.CategoryId")
+            == ModelValidationState.Valid &&
+            !context.Categories.Any(c => c.CategoryId == Product.CategoryId))
+            {
+                ModelState.AddModelError("Product.CategoryId",
+                "Enter an existing category ID");
+            }
+            if (ModelState.GetValidationState("Product.SupplierId")
+            == ModelValidationState.Valid &&
+            !context.Suppliers.Any(s => s.SupplierId == Product.SupplierId))
+            {
+                ModelState.AddModelError("Product.SupplierId",
+                "Enter an existing supplier ID");
+            }
+            if (ModelState.IsValid)
+            {
+                TempData["name"] = Product.Name;
+                TempData["price"] = Product.Price.ToString();
+                TempData["categoryId"] = Product.CategoryId.ToString();
+                TempData["supplierId"] = Product.SupplierId.ToString();
+                return RedirectToPage("FormResults");
+            }
+            else
+            {
+                return Page();
+            }
         }
     }
 }
