Creating a Custom Property Validation Attribute

--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/FormHandler.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/FormHandler.cshtml
@@ -2,13 +2,14 @@
 @model FormHandlerModel
 @using Microsoft.AspNetCore.Mvc.RazorPages
 @using Microsoft.EntityFrameworkCore
-@using Microsoft.AspNetCore.Mvc.ModelBinding
+@using WebApp.Validation
 
 <partial name="_Validation" />
 
 <div class="m-2">
     <h5 class="bg-primary text-white text-center p-2">HTML Form</h5>
     <form asp-page="FormHandler" method="post" id="htmlform">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
             <label>Name</label>
             <div>
@@ -22,16 +23,6 @@
                 <span asp-validation-for="Product.Price" class="text-danger"></span>
             </div>
             <input class="form-control" asp-for="Product.Price" />
-        </div>
-        <div class="form-group">
-            <label>Category Name</label>
-            @{
-                #pragma warning disable CS8602
-            }
-            <input class="form-control" asp-for="Product.Category.Name" />
-            @{
-                #pragma warning restore CS8602
-            }
         </div>
         <div class="form-group">
             <label>CategoryId</label>
@@ -51,9 +42,6 @@
         </div>
         <button type="submit" class="btn btn-primary mt-2">Submit</button>
     </form>
-    <button form="htmlform" asp-page="FormHandler" class="btn btn-primary mt-2">
-        Submit (Outside Form)
-    </button>
 </div>
 
 @functions {
@@ -67,54 +55,15 @@
         }
 
         [BindProperty]
-        public Product? Product { get; set; }
-
-        // [BindProperty(Name = "Product.Category")]
-        // public Category Category { get; set; } = new();
+        public Product Product { get; set; } = new();
 
         public async Task OnGetAsync(long id = 1)
         {
             Product = await context.Products.FirstAsync(p => p.ProductId == id);
         }
-        @* public IActionResult OnPost()
-            {
-            foreach (string key in Request.Form.Keys
-            .Where(k => !k.StartsWith("_")))
-            {
-            TempData[key] = string.Join(", ", Request.Form[key]);
-            }
-            return RedirectToPage("FormResults");
-            } *@
+
         public IActionResult OnPost()
         {
-            if (ModelState.GetValidationState("Product.Price") == ModelValidationState.Valid && Product.Price < 1)
-            {
-                ModelState.AddModelError("Product.Price", "Enter a positive price");
-            }
-            if (ModelState.GetValidationState("Product.Name")
-            == ModelValidationState.Valid
-            && ModelState.GetValidationState("Product.Price")
-            == ModelValidationState.Valid
-            && Product.Name.ToLower().StartsWith("small")
-            && Product.Price > 100)
-            {
-                ModelState.AddModelError("",
-                "Small products cannot cost more than $100");
-            }
-            if (ModelState.GetValidationState("Product.CategoryId")
-            == ModelValidationState.Valid &&
-            !context.Categories.Any(c => c.CategoryId == Product.CategoryId))
-            {
-                ModelState.AddModelError("Product.CategoryId",
-                "Enter an existing category ID");
-            }
-            if (ModelState.GetValidationState("Product.SupplierId")
-            == ModelValidationState.Valid &&
-            !context.Suppliers.Any(s => s.SupplierId == Product.SupplierId))
-            {
-                ModelState.AddModelError("Product.SupplierId",
-                "Enter an existing supplier ID");
-            }
             if (ModelState.IsValid)
             {
                 TempData["name"] = Product.Name;
@@ -125,8 +74,10 @@
             }
             else
             {
+                ModelState.PromotePropertyErrors(nameof(Product));
                 return Page();
             }
         }
+
     }
 }
