--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Shared/_Validation.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Views/Shared/_Validation.cshtml
@@ -5,3 +5,6 @@
         );
     });
 </script>
+<script src="/lib/jquery/jquery.min.js"></script>
+<script src="~/lib/jquery-validate/jquery.validate.min.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"> </script>
