--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Message.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Message.cshtml
@@ -27,6 +27,7 @@ else if (Model.Message is IDictionary<string, string>)
     </table>
 }
 @functions {
+    [RequireHttps]
     public class MessageModel : PageModel
     {
         public object Message { get; set; } = "This is the Message Razor Page";
