Understanding Resource Filters

--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Message.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Message.cshtml
@@ -1,6 +1,8 @@
 @page "/pages/message"
 @model MessageModel
 @using Microsoft.AspNetCore.Mvc.RazorPages
+@using WebApp.Filters
+
 @if (Model.Message is string)
 {
     @Model.Message
@@ -26,10 +28,13 @@ else if (Model.Message is IDictionary<string, string>)
         </tbody>
     </table>
 }
+
 @functions {
     [RequireHttps]
+    [AsyncSimpleCache]
     public class MessageModel : PageModel
     {
-        public object Message { get; set; } = "This is the Message Razor Page";
+        public object Message { get; set; } =
+        $"{DateTime.Now.ToLongTimeString()}: This is the Message Razor Page";
     }
 }
