--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Message.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Message.cshtml
@@ -31,10 +31,15 @@ else if (Model.Message is IDictionary<string, string>)
 
 @functions {
     [RequireHttps]
-    [AsyncSimpleCache]
+    // [AsyncSimpleCache]
+    [ChangePageArgs]
     public class MessageModel : PageModel
     {
-        public object Message { get; set; } =
-        $"{DateTime.Now.ToLongTimeString()}: This is the Message Razor Page";
+        public object Message { get; set; } = $"{DateTime.Now.ToLongTimeString()}: This is the Message Razor Page";
+
+        public void OnGet(string message1, string message2)
+        {
+            Message = $"{message1}, {message2}";
+        }
     }
 }
