--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Message.cshtml
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/Pages/Message.cshtml
@@ -1,6 +1,8 @@
 @page "/pages/message"
 @model MessageModel
 @using Microsoft.AspNetCore.Mvc.RazorPages
+@using Microsoft.AspNetCore.Mvc.Filters
+
 @using WebApp.Filters
 
 @if (Model.Message is string)
@@ -32,7 +34,7 @@ else if (Model.Message is IDictionary<string, string>)
 @functions {
     [RequireHttps]
     // [AsyncSimpleCache]
-    [ChangePageArgs]
+    // [ChangePageArgs]
     public class MessageModel : PageModel
     {
         public object Message { get; set; } = $"{DateTime.Now.ToLongTimeString()}: This is the Message Razor Page";
@@ -40,6 +42,15 @@ else if (Model.Message is IDictionary<string, string>)
         public void OnGet(string message1, string message2)
         {
             Message = $"{message1}, {message2}";
+        }
+
+        public override void OnPageHandlerExecuting(
+        PageHandlerExecutingContext context)
+        {
+            if (context.HandlerArguments.ContainsKey("message1"))
+            {
+                context.HandlerArguments["message1"] = "New message";
+            }
         }
     }
 }
