--- a/99-practice/07-UsingIdentityAPI/IdentityApp/Views/Shared/_LoginPartial.cshtml
+++ b/99-practice/07-UsingIdentityAPI/IdentityApp/Views/Shared/_LoginPartial.cshtml
@@ -1,8 +1,10 @@
+@inject SignInManager<IdentityUser> SignInManager
+
 <nav class="nav">
     @if (User.Identity!.IsAuthenticated)
     {
-        <a asp-area="Identity" asp-page="/Account/Manage/Index" class="nav-link bg-secondary text-white">
-            @User.Identity?.Name
+        <a asp-page="/Identity/Index" class="nav-link bg-secondary text-white">
+            @User.Identity.Name
         </a>
         <a asp-area="Identity" asp-page="/Account/Logout" class="nav-link bg-secondary text-white">
             Logout
