--- a/99-practice/07-UsingIdentityAPI/IdentityApp/Pages/Identity/Admin/Dashboard.cshtml
+++ b/99-practice/07-UsingIdentityAPI/IdentityApp/Pages/Identity/Admin/Dashboard.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewBag.Workflow = "Dashboard";
 }
+
+<div asp-validation-summary="All" class="text-danger m-2"></div>
 <table class="table table-sm table-striped table-bordered">
     <tbody>
         <tr>
@@ -23,3 +25,6 @@
         </tr>
     </tbody>
 </table>
+<form method="post">
+    <button class="btn btn-secondary" type="submit">Seed Database</button>
+</form>
