--- a/99-practice/07-UsingIdentityAPI/IdentityApp/Pages/Identity/Admin/_AdminWorkflows.cshtml
+++ b/99-practice/07-UsingIdentityAPI/IdentityApp/Pages/Identity/Admin/_AdminWorkflows.cshtml
@@ -18,3 +18,7 @@
 <a class="btn btn-success btn-block @getClass("Edit")" asp-page="Edit" asp-route-id="">
     Edit Users
 </a>
+
+<a class="btn btn-success btn-block @getClass("Passwords")" asp-page="Passwords" asp-route-id="">
+    Passwords
+</a>
