--- a/99-practice/07-UsingIdentityAPI/IdentityApp/Pages/Identity/UserRecoveryCodes.cshtml
+++ b/99-practice/07-UsingIdentityAPI/IdentityApp/Pages/Identity/UserRecoveryCodes.cshtml
@@ -11,7 +11,7 @@
 </h6>
 <table class="table table-sm table-striped">
     <tbody>
-        @for (int i = 0; i < Model.RecoveryCodes.Length; i += 2)
+        @for (int i = 0; i < Model.RecoveryCodes?.Length; i += 2)
         {
             <tr>
                 <td><code>@Model.RecoveryCodes[i]</code></td>
